# SLR_on_Git_VCS

./: .gitignore  README.md  pyproject.toml
src/: __init__.py  main.py  snowballing.py
