[project]
name = "slr-on-github"
version = "0.1.0"
description = ""
authors = [
    {name = "ppjaisri",email = "ppjaisri@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
]

[dependency-groups]
dev = [
    "ipykernel (>=7.2.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
