[project]
name = "slr-on-git-vcs"
version = "0.1.0"
description = ""
authors = [
    {name = "PPjaisri"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.34.2,<3.0.0)",
    "pdfplumber (>=0.11.10,<0.12.0)"
]

[dependency-groups]
dev = [
    "pandas (>=3.0.3,<4.0.0)",
    "ipykernel (>=7.3.0,<8.0.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
